--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^8.2.0",
     "escape-html": "^1.0.3",
     "express": "^4.19.2",
+    "mongodb": "^6.7.0",
     "next": "13.5.2",
     "payload": "^2.0.7",
     "payload-admin-bar": "^1.0.6",
