--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@payloadcms/richtext-slate": "^1.0.0",
     "@stripe/react-stripe-js": "^1.16.3",
     "@stripe/stripe-js": "^1.46.0",
-    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "escape-html": "^1.0.3",
     "express": "^4.19.2",
@@ -59,6 +58,7 @@
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "copyfiles": "^2.4.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -71,6 +71,6 @@
     "prettier": "^2.7.1",
     "slate": "0.91.4",
     "ts-node": "10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "4.8.4"
   }
 }
